# muscle-memory

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/: benchmark.json
.github/: dependabot.yml
.github/workflows/: binary.yml  ci.yml  publish.yml  release.yml
.hermes/plans/: 2026-04-12_211507-v1-implementation-plan.md
demo/: __init__.py
demo/orbitops/: .gitignore  DOGFOOD.md  README.md  __init__.py  app.py  check.py  data.py  ui.py
demo/orbitops/static/: app.js  styles.css
docs/: authentication.md  demo.md  development.md  performance.md  quality.md  release.md  testing.md
docs/superpowers/plans/: 2026-04-22-curl-binary-install.md  2026-04-24-measurement-credibility.md
docs/superpowers/specs/: 2026-04-13-memory-system-v1-design.md  2026-04-22-curl-binary-install-design.md  2026-04-23-personal-compounding-loop-design.md
scripts/: build_release_binaries.py  check_release_artifacts.py  check_release_binaries.py  dev-sync  generate_release_checksums 2.py  install.sh  mm_binary_entrypoint.py  release_benchmark_gate.py  release_notes.py  release_preflight.py
src/muscle_memory/: __init__.py  __main__.py  admission.py  bootstrap.py  cli.py  config.py  db.py  debug.py  dedup.py  embeddings.py  extractor.py  ingest.py  llm.py  models.py  outcomes.py  personal_loop.py  prompt_cleaning.py  refine.py  release_artifacts.py  release_binaries.py  release_notes.py  release_preflight.py  retriever.py  scorer.py  simulate.py  simulate_fixtures.py
src/muscle_memory/eval/: __init__.py  benchmark.py  evaluator.py  labeler.py  scorers.py
src/muscle_memory/harness/: __init__ 2.py  __init__.py  base.py  claude_code.py  codex.py  generic 2.py
src/muscle_memory/hooks/: __init__.py  install.py  stop.py  user_prompt.py
src/muscle_memory/prompts/: __init__.py  extract.md  refine_gradient.md  (+2 more)
tests/: conftest.py  test_behavioral.py  test_ci_workflow.py  test_cli_doctor.py  test_cli_govern 2.py  test_cli_govern.py  test_cli_harness 2.py  test_cli_harness.py  test_cli_help.py  test_cli_job_runtime.py  test_cli_jobs.py  test_cli_rescore.py  test_cli_review.py  test_cli_stats.py  test_cli_use.py  test_db.py  test_debug.py  test_dedup.py  test_demo_app.py  test_edge_cases.py  test_eval.py  test_extractor.py  test_hooks_personal_loop.py  test_ingest_codex.py  test_ingest_measurement.py  test_install_script.py  test_integration.py  test_jobs.py  test_llm.py  test_models.py  test_outcomes.py  test_personal_loop_db.py  test_refine.py  test_release_artifacts.py  test_release_binaries.py  test_release_notes.py  test_release_preflight 2.py  test_release_preflight.py  test_release_workflow.py  test_retriever.py  (+3 more)
