[project]
name = "muscle-memory"
version = "0.2.0"
description = "Procedural memory for coding agents. Your past sessions, compiled."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Azhar Anwar", email = "azharcodes@gmail.com" },
]
keywords = [
    "llm",
    "claude-code",
    "agent",
    "memory",
    "procedural-memory",
    "procmem",
    "skills",
    "anthropic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "sqlite-vec>=0.1.6",
    "anthropic>=0.40",
    "fastembed>=0.4",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]
openai = ["openai>=1.40"]
voyage = ["voyageai>=0.2"]

[project.scripts]
mm = "muscle_memory.cli:app"
muscle-memory = "muscle_memory.cli:app"

[project.urls]
Homepage = "https://github.com/iamazhar/muscle-memory"
Repository = "https://github.com/iamazhar/muscle-memory"
Issues = "https://github.com/iamazhar/muscle-memory/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/muscle_memory"]
include = [
    "src/muscle_memory/**/*.py",
    "src/muscle_memory/**/*.md",
    "src/muscle_memory/prompts/*.md",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/muscle_memory",
    "tests",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (let formatter handle)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
